--- a/templates/item_choice.html
+++ b/templates/item_choice.html
@@ -34,6 +34,7 @@ New ${fn}: <input type='text' name='new_${fn}' /><input type='submit' value='Cre
 </table>
 % if fn=='item':
 <input type='submit' value="View" />
+<input type='submit' name='view_all' value='View all' />
 </form>
 % endif
 % endfor
